2004-08-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): "sftp" has nil
	`tramp-copy-keep-date-arg'.
	(tramp-do-copy-or-rename-file-out-of-band): Handle it.

2004-08-09  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.1 released.

	* tramp.el (tramp-methods): "sftp", "psftp": new external methods.
	"plink", "plink1" and "pscp": parameter for port specification is
	"-P".

2004-08-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-post-connection): Quote $1 and $2 of shell
	function "tramp_file_attributes".  Otherwise, file names
	containing spaces are misinterpreted.  Reported by Magnus Henoch
	<mange@freemail.hu>.

2004-08-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-truename): FILENAME must be expanded
	first.  Otherwise, parameters like "/ssh:deego@gnufans.net:~" will
	return obscure results.  Reported by D. Goel <deego@gnufans.org>.

2004-08-03  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Change custom definition of log-args
	to the new syntax.
	(tramp-wrong-passwd-regexp): Add "Tramp connection closed" string.
	(tramp-maybe-open-connection): Add "echo \"Tramp connection
	closed\"" to connection command.  By this, we will see easily when
	a connection has failed.

2004-08-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Add "(-p" "%p)" in login-args where
	applicable for the port kludge.  Arrange login-args as list of
	lists, in order to discard a sublist when the corresponding
	parameter is not set (like user name, port number).  Adapt
	docstring.
	(tramp-maybe-open-connection): Change evaluation of login-args
	according the the changes above.
	(tramp-make-tramp-file-name): Use "%l" as placeholder for the
	localname part.  "%p" is used for port numbers now, and we want to
	avoid headaches.

2004-08-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-default-method-alist)